# haskell-type-level-prime-product

./: LICENCE  README  type-level-prime-composition.cabal  type-level-prime-product.cabal
Data/: TypeLevel.hs
Data/TypeLevel/: Comparison.hs  Exponential.hs  Integer.hs  List.hs  Number.hs  Operator.hs  Ordering.hs  PrimeComposition.hs  PrimeProduct.hs  Value.hs
Data/TypeLevel/Integer/: Synonyms.hs
Data/TypeLevel/PrimeProduct/: Dense.hs  DenseTest.hs  Sparse.hs  SparseTest.hs
