Name:           type-level-prime-composition
Version:        0.1
Synopsis:       Types and functions for type-level prime compositions, encoded as lists of exponentiated prime factors.
Homepage:       https://github.com/jonathanknowles/hs-memory/
License:        BSD3
License-file:   LICENCE
Author:         Jonathan Knowles
Maintainer:     mail@jonathanknowles.net
Stability:      Experimental
Category:       Data
Build-type:     Simple
Cabal-version:  >=1.2

Library
    Exposed-modules:   Data.TypeLevel.PrimeComposition
    Build-depends:     base >= 4.0

