Name:           type-level-prime-product
Version:        0.1
Synopsis:       Type-level encodings and operations for products of prime numbers.
Homepage:       https://github.com/jonathanknowles/hs-memory/
License:        BSD3
License-file:   LICENCE
Author:         Jonathan Knowles
Maintainer:     mail@jonathanknowles.net
Stability:      Experimental
Category:       Data
Build-type:     Simple
Cabal-version:  >=1.2

Library
    Exposed-modules:   Data.TypeLevel.Exponential
                       Data.TypeLevel.Integer
                       Data.TypeLevel.Integer.Synonyms
                       Data.TypeLevel.List
                       Data.TypeLevel.Number
                       Data.TypeLevel.Operator
                       Data.TypeLevel.Ordering
                       Data.TypeLevel.PrimeProduct
                       Data.TypeLevel.PrimeProduct.Dense
                       Data.TypeLevel.PrimeProduct.Sparse
                       Data.TypeLevel.Value
    Other-modules:     Data.TypeLevel.PrimeProduct.DenseTest
                       Data.TypeLevel.PrimeProduct.SparseTest
    Build-depends:     base >= 4.0
